updated depracated methods