@@ -97,8 +97,8 @@ public class ServiceMergeServlet extends HttpServlet {
 		try {
 			for (int i = 0; i < serviceMergeIdList.length; i++) {
 
-				serviceIdMergeSource = new Long(serviceMergeIdList[i]);
-				serviceIdMergeDestination = new Long(req
+				serviceIdMergeSource = Long.valueOf(serviceMergeIdList[i]);
+				serviceIdMergeDestination = Long.valueOf(req
 						.getParameter("serviceIdMergeDestination"));
 				if (!serviceIdMergeSource.equals(serviceIdMergeDestination)) {
 
@@ -126,7 +126,7 @@ public class ServiceMergeServlet extends HttpServlet {
 		// IF NO CONFLICTS, THEN DELETE OLD SOURCE SERVICES
 		if(mergeResults!=null && (mergeResults.getConflictMsgs()==null || mergeResults.getConflictMsgs().isEmpty())){
 			for (int i = 0; i < serviceMergeIdList.length; i++) {
-				serviceIdMergeSource = new Long(serviceMergeIdList[i]);
+				serviceIdMergeSource = Long.valueOf(serviceMergeIdList[i]);
 				Service service = store.getServiceById(serviceIdMergeSource);
 				store.deleteService(service);
 			}
